// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Journal /> renders a carousel of notes 1`] = `
<Styled(View)>
  <BackgroundGradient />
  <Styled(Text)>
    Journal
  </Styled(Text)>
  <Styled(SideSwipe)
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    contentOffset={209}
    data={
      Array [
        Object {
          "date": "03-02-2018",
          "id": 0,
          "note": "Today was...",
          "result": "GOOD",
        },
        Object {
          "date": "03-03-2018",
          "id": 1,
          "note": "Today was...",
          "result": "GOOD",
        },
        Object {
          "date": "03-04-2018",
          "id": 2,
          "note": "Today was...",
          "result": "BAD",
        },
        Object {
          "date": "03-05-2018",
          "id": 3,
          "note": "Today was...",
          "result": "BAD",
        },
      ]
    }
    itemWidth={332}
    renderItem={[Function]}
    threshold={100}
  />
</Styled(View)>
`;

exports[`<Journal /> renders a single note 1`] = `
<Styled(View)>
  <BackgroundGradient />
  <Styled(Text)>
    Journal
  </Styled(Text)>
  <Styled(View)>
    <JournalEntry
      date="03-02-2018"
      id={0}
      note="Today was..."
      result="GOOD"
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`<Journal /> renders with no notes 1`] = `
<Styled(View)>
  <BackgroundGradient />
  <Styled(Text)>
    Journal
  </Styled(Text)>
  <Styled(Text)>
    No entries yet.
  </Styled(Text)>
</Styled(View)>
`;
